--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "description": "'Server backend for the FE3 Pokemon final'",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "babel index.js -d build && nodemon build",
     "test": "jest /*"
   },
   "author": "Will Mitchell <wvmitchell@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-latest": "^6.24.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "express-cors": "0.0.3",
+    "nodemon": "^1.15.1",
     "path": "^0.12.7",
     "request": "^2.83.0"
   }
